runs on cluster, missing python graphing script

--- a/clase/makefile
+++ b/clase/makefile
@@ -1,6 +1,12 @@
-all: pi.x
-	mpiexec -np 4 ./pi.x
-pi.x:
-	mpicc pi.c -o pi.x
+all: integral.x
+	mpiexec -np 4 ./integral.x 1000 >> runs.dat
+	mpiexec -np 4 ./integral.x 10000 >> runs.dat	
+	mpiexec -np 4 ./integral.x 100000 >> runs.dat
+	mpiexec -np 4 ./integral.x 1000000 >> runs.dat
+	mpiexec -np 4 ./integral.x 10000000 >> runs.dat
+	mpiexec -np 4 ./integral.x 100000000 >> runs.dat
+integral.x:
+	mpicc integra.c -o integral.x
 clean:
 	rm *.x
+	rm *.dat
